# cellular_automata

./: Pipfile  README.md  pyproject.toml  pytest.ini  run
.circleci/: config.yml
cellular_automata/: __init__.py  cli.py  curses.py  exceptions.py  options.py  text.py  util.py
cellular_automata/visualizations/: curses.py  none.py
game_of_life/: __init__.py  curses.py
game_of_life/visualizations/: curses.py
tests/: test_cli.py  test_count_neighbors.py  test_generations.py  test_grid.py  test_neighbors.py  test_next_gen.py  test_next_generation.py  test_options.py  test_parse_rulestring.py  test_util.py
