[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cellular_automata"
version = "0.1.0"
description = ""
authors = ["Mike Conigliaro <mike@conigliaro.org>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"

[tool.poetry.scripts]
ca = "cellular_automata.cli:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
