[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cellular_automata"
version = "0.1.0"
description = ""
authors = ["Mike Conigliaro <mike@conigliaro.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.10"

[tool.poetry.dev-dependencies]
black = { version = "^22.3.0", allow-prereleases = true }
pytest = "^7.1"
pytest-cov = "^3.0"

[tool.poetry.scripts]
ca = "cellular_automata.cli:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--cov cellular_automata -ra"
